RegressionTests/TestSuiteExport/reject/not_callable.blade
// EXPECT: fail
// DIAGNOSTICS: NotCallable

cog task main() {
    var x: u32 = 1;
    x();
}